2001-09-25  Bruno Haible  <haible@clisp.cons.org>

	Upgrade to automake-1.5.
	* Makefile.am (AUTOMAKE_OPTIONS): Add 'no-dependencies'.
	(COMMON_SOURCE): Renamed from COMMON_SOURCES.
	(FORMAT_SOURCE): Renamed from FORMAT_SOURCES.
	* ylwrap: Remove file.

2001-09-22  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (extractor_func): New typedef.
	(scanner_fp): Remove typedef.
	(main): Use extractor_func and call it via extract_from_file.
	(extract_from_file): New function.
	(scan_c_file, scan_po_file, scan_java_file, scan_ycp_file,
	scan_rst_file): Remove functions.
	(language_to_extractor): Renamed from language_to_scanner.
	* x-c.h (SCANNERS_C): Use extract_c instead of scan_c_file.
	* x-java.h (SCANNERS_JAVA): Use extract_java instead of scan_java_file.
	* x-po.h (SCANNERS_PO): Use extract_po instead of scan_po_file.
	* x-rst.h (SCANNERS_RST): Use extract_rst instead of scan_rst_file.
	* x-ycp.h (SCANNERS_YCP): Use extract_ycp instead of scan_ycp_file.

2001-09-23  Bruno Haible  <haible@clisp.cons.org>

	* plural-eval.c: New file.
	* msgfmt.c: Include plural-exp.h.
	(sigfpe_exit, sigfpe_code): New variables.
	(sigfpe_handler, install_sigfpe_handler, uninstall_sigfpe_handler,
	check_plural_eval, check_plural): New functions.
	(main): Call it if --check-header is enabled.
	* Makefile.am (msgfmt_SOURCES): Add plural-eval.c.

2001-10-04  Tommy Johansson  <tommy.johansson@kanalen.org>

	* x-java.l (object_list): New type.
	(INITIAL_OBJECT_LIST_SIZE, OBJECT_LIST_GROWTH): New macros.
	(java_keyword): New type.
	(strip_ending_spaces): New function.
	(object_list_alloc, object_list_destroy, get_num_objects, get_object,
	add_object, alloc_keyword): New functions.
	(java_keywords): Change type.
	(extract_keyword, extract_msgid_arg, extract_msgid_plural_arg): New
	functions.
	(is_keyword): Change return type.
	(x_java_keyword): Update.
	(extract_java): Count arguments, and support plural keywords like
	ngettext.

2001-09-19  Bruno Haible  <haible@clisp.cons.org>
